--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: "Anand DUbey"
+title: "Anand Dubey"
 author: "Anand Dubey"
 description: "Indira Gandhi Institue of Development Research"
 permalink: /:title/
@@ -17,6 +17,7 @@ minimal: false             # use a dark header
 
 navigation:                # accepts {file, title, url, icon, sidebaricon}
   - {file: "index.html", title: "Home", icon=home}
+  - {file: "/anand.pdf", title: "CV", icon=home}
   - {file: "README.md", title="About me", icon= address-card}
 
 external:                  # shows a footer with social links - for available icons see fontawesome.com/icons
