--- a/_config.yml
+++ b/_config.yml
@@ -18,8 +18,8 @@ minimal: false             # use a dark header
 navigation:                # accepts {file, title, url, icon, sidebaricon}
   #- {file: "index.html", title: "Home", icon=home}
   #- {file: "README.md", title="About me", icon= address-card}
-  - {file: "/anand.pdf", title: "Research", icon=home}
-  - {file: "/anand.pdf", title: "CV", icon=home}
+  - {file: "/reserach.md", title: "Research", icon=home}
+  - {file: "anand.pdf", title: "CV", icon=home}
  
 
 external:                  # shows a footer with social links - for available icons see fontawesome.com/icons
