--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ minimal: false             # use a dark header
 navigation:                # accepts {file, title, url, icon, sidebaricon}
   #- {file: "index.html", title: "Home", icon=home}
   #- {file: "README.md", title="About me", icon= address-card}
-  - {file: "/research.md", title: "Research", icon=home}
+  - {file: "research.md", title: "Research", icon=home}
   - {file: "anand.pdf", title: "CV", icon=home}
  
 
