--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: "Anand Dubey"
 author: "Anand Dubey"
-description: "Indira Gandhi Institute of Development Research"
+description: "Anand Dubey"
 permalink: /:title/
 lang: "en"
 excerpt_separator: "\n\n\n"
